<resources>
    <string name="app_name">UnBSolidaria</string>

    <!-- Login -->
    <string name="logo">Logo</string>
    <string name="user">Voluntário</string>
    <string name="ass">Organização</string>
    <string name="name_ass">Razão Social</string>
    <string name="name_usr">Nome Completo</string>
    <string name="name_usr_fisrt_name">Primeiro Nome</string>
    <string name="name_usr_last_name">Último Nome</string>
    <string name="CPF">CPF</string>
    <string name="CNPJ">CNPJ</string>
    <string name="CPF_CNPJ">CPF/CNPJ</string>
    <string name="website">Site</string>
    <string name="age">Idade</string>
    <string name="matricula">Matrícula</string>
    <string name="gender">Gênero</string>
    <string name="address">Endereço</string>
    <string name="cep">CEP</string>
    <string name="new_account">Criar conta</string>
    <string name="prompt_email">Email</string>
    <string name="description">Descrição</string>
    <string name="phonenumber">Telefone</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_retype_password">Reescreva a Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_register">Não possui conta? Registre-se</string>
    <string name="action_login">Já tem conta? Faça o Login</string>
    <string name="error_invalid_email">Esse email não é válido</string>
    <string name="error_invalid_password">Esta senha não é válida</string>
    <string name="error_short_password">Esta senha é muito curta</string>
    <string name="error_long_password">Esta senha é muito longa</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="error_login_auth">O Login Falhou.</string>
    <string name="error_wrong_fields">Verifique se os campos estão preenchidos corretamente.</string>
    <string name="error_db_connection">Não foi possível se conectar ao banco de dados.</string>
    <string name="error_wrong_credentials">Verifique se as credenciais estão corretas.</string>
    <string name="permission_rationale">Permissão de acesso aos contatos necessária para auto-completar email.</string>
    <string name="process_autentication">Autenticando…</string>

    <!-- Signup -->
    <string-array name="su_AcountTypeOptions">
        <item>Voluntário</item>
        <item>Organização</item>
    </string-array>
    <string-array name="su_GenderOptions">
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>
    <string name="su_request_progress">Requisição em andamento...</string>
    <string name="su_org_success">Conta criada com Sucesso!</string>
    <string name="su_vol_success">Pedido de Criação feito com suscesso. Em breve entraremos em contato</string>
    <string name="su_error">Erro no cadastro, verifique se todos os campos estão corretos</string>

    <!-- Organization-->
    <string name="co_tDateFormat">"%1$02d-%2$02d-%3$d"</string>
    <!-- Opportunities View (ov) -->
    <!-- Changes according to good TextView pratices. See: http://stackoverflow.com/a/33165040-->
    <string name="ov_description">"%1$s"</string>
    <string name="ov_org">"Organização: %1$s"</string>
    <string name="ov_local">"Local: %1$s"</string>
    <string name="ov_vagas">"Vagas: %1$s"</string>
    <string name="ov_dateStart">"Data de Início: %1$s"</string>
    <string name="ov_dateEnd">"Data de Término: %1$s"</string>
    <string name="ov_undefinedField">Não especificado</string>
    <!-- Create Opportunity (co) -->
    <string name="co_publicationSucess">Oportunidade publicada com sucesso.</string>
    <string name="co_publicationSendError">Erro ao enviar proposta</string>
    <string name="co_editionSucess">Oportunidade alterada com sucesso.</string>
    <string name="co_generalSendError">Não foi possível se conectar com o servidor.</string>

    <string name="co_minTitleError">Título muito curto (Mínimo %1$02d caracteres)</string>
    <string name="co_formatTitleError">Título não atende aos padrões</string>
    <string name="co_spotsNumberError">Número de participantes permitidos inválido.</string>
    <string name="co_minDescError">Tamanho da Descrição fora do intervalo permitido: %1$02d - %2$02d caracters</string>
    <string name="co_eventPeriodError">Período do Evento inválido</string>

    <!-- Edit Profile (ep) -->
    <string name="ep_submit_sucess">Perfil atualizado com sucesso!</string>
    <string name="ep_submit_fail">Não foi possível atualizar informações de perfil.</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="rest_server_connection_error">Não foi possível se conectar ao servidor</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_oportunidade_acitivity">OportunidadeActivity</string>
    <string name="action_compartilhar">Compartilhar</string>
    <string name="title_activity_organization_screen">OrganizationScreen</string>
</resources>
